fix: Audio players now correctly scale on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,11 @@
 		margin: 20px 0 !important;
 		width: 100% !important;
 	}
+
+	.post-content > audio, .html-audio {
+		margin: 20px 0 !important;
+		width: 100% !important;
+	}
 }
 
 .logo__mark > .greater-icon > path {
